--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<nav id="mysidenav" class="sidenav">
 		<div id="mysidenavcontent" class="sidenavcontent">
-			<img src="assets/-d9ujkr.jpg" alt="Profile picture" class="profile-picture" loading="lazy">
+			<img src="assets/1691230208662.jpeg" alt="Profile picture" class="profile-picture" loading="lazy">
 			<p class="sidebarname">Aman Mourya</p>
 			<hr>
 			<p class="sidebarcitation">"Stay hungry, stay foolish."</p>
